src/modules/core/core.scss
vz-diagram{
  display: block;
  position: relative;
}
vz-diagram > svg{
  width: 100%;
  min-height: inherit;
  display: inline-block;
}

.vz-selected-item-overlay{
  width: 100px;
  height: 80px;
  position: absolute;
  pointer-events: none;
//  z-index: -1;
}
.vz-selected-item-overlay > *{
  pointer-events: auto;
}

vz-resize-handle{
  width: 4px;
  height: 4px;
  background: #fff;
  border: 1px solid #a6a6a6;
}
vz-resize-handle[vz-overlay-handle="bottom right"]{
  cursor: nwse-resize;
}
[vz-overlay-handle]{
  position: absolute;
}
[vz-overlay-handle="bottom right"]{
  bottom: 0;
  right: 0;
  transform: translateX(50%) translateY(50%);
}

.vz-selected-item-overlay{
  border: 1px solid #939393;
  box-sizing: border-box;
}

